Update Weather Classification Using Random Forest Classifier.ipynb
Update comment to optimize random forest model using random search

--- a/TUGAS 1/CODE/Weather Classification Using Random Forest Classifier.ipynb
+++ b/TUGAS 1/CODE/Weather Classification Using Random Forest Classifier.ipynb
@@ -664,6 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Random search untuk hyperparameter tuning (optimasi)\n",
     "param_dist = {'n_estimators': randint(50,500),\n",
     "              'max_depth': randint(1,20)}\n",
     "\n",
@@ -682,11 +683,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a variable for the best model\n",
+    "# Buat variabel baru untuk Hyperparameter terbaik\n",
     "best_rf = rand_search.best_estimator_\n",
     "\n",
-    "# Print the best hyperparameters\n",
-    "print('Best hyperparameters:',  rand_search.best_params_)"
+    "# Hasil dari Hyperparameter terbaik\n",
+    "print('Hyperparameter terbaik:',  rand_search.best_params_)"
    ]
   },
   {
